# shell-agent

./: .gitignore  README.md  initial-prompt.txt  lxc_restart.sh  package-lock.json  package.json  prompt_debugger.py  prompt_testing.py  pyproject.toml  shell-agent.mjs  shell_agent.py  shell_agent.sh  start.sh  stop.sh
old_prompts/: manually_written_prompt.txt
