[project]
name = "shell-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "megahomyak",email = "g.megahomyak@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "openrouter (>=0.9.1,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
